--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <br>
       <h2>Tap Here</h2>
       <div class="circle"></div>
-      <img src="/assets/Card-Logo.png" class="dsa">
+      <img src="assets/Card-Logo.png" class="dsa">
       <h2 class="gsas">1445 H</h2>
     </div>
   </div>
