--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <h2 style="color: #01787E;">Happy Eid Mubaarok ✨<span id="jam">Loading...</span></h2>
     <p>
       <br>تَقَبَّلَ اللَّهُ مِنَّا وَمِنْكُمْ كُلُّ عاَمٍ وَأَنْتُمْ بِخَيْرٍ
-      <br> Maafin Faried Jika Ada Kesalahan 
+      <br> Maafin Farid Jika Ada Kesalahan 
       <br>Yang Di Sengaja Maupun Tidak Di Sengaja yaa🙏
     </p>
 
